--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.6.0",
     "@microsoft/decorators": "1.6.0",
-    "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33",
+    "@microsoft/sp-core-library": "1.6.0",
+    "@microsoft/sp-dialog": "1.6.0",
     "@microsoft/sp-listview-extensibility": "1.6.0",
-    "@microsoft/sp-dialog": "1.6.0"
+    "@pnp/common": "^1.2.4",
+    "@pnp/logging": "^1.2.4",
+    "@pnp/odata": "^1.2.4",
+    "@pnp/sp": "^1.2.4",
+    "@types/es6-promise": "0.0.33",
+    "@types/webpack-env": "1.13.1"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.6.0",
