Added footer application customizer

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -7,6 +7,6 @@
     "packageManager": "npm",
     "isCreatingSolution": false,
     "componentType": "extension",
-    "extensionType": "ListViewCommandSet"
+    "extensionType": "ApplicationCustomizer"
   }
 }
