--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@pnp/odata": "^1.2.4",
     "@pnp/sp": "^1.2.4",
     "@types/es6-promise": "0.0.33",
-    "@types/webpack-env": "1.13.1"
+    "@types/webpack-env": "1.13.1",
+    "@microsoft/sp-application-base": "1.6.0"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.6.0",
